p8/y.output
Terminals unused in grammar

   T_MINUS_MINUS
   T_PLUS_PLUS
   T_ERROR


Grammar

    0 $accept: program $end

    1 program: declaration_list block_list

    2 declaration_list: declaration_list declaration
    3                 | empty

    4 declaration: variable_declaration T_SEMIC
    5            | object_declaration T_SEMIC
    6            | forward_declaration T_SEMIC

    7 variable_declaration: simple_type T_ID optional_initializer
    8                     | simple_type T_ID T_LBRACKET expression T_RBRACKET

    9 simple_type: T_INT
   10            | T_DOUBLE
   11            | T_STRING

   12 optional_initializer: T_ASSIGN expression
   13                     | empty

   14 $@1: /* empty */

   15 object_declaration: object_type T_ID $@1 T_LPAREN parameter_list_or_empty T_RPAREN
   16                   | object_type T_ID T_LBRACKET expression T_RBRACKET

   17 object_type: T_TRIANGLE
   18            | T_PIXMAP
   19            | T_CIRCLE
   20            | T_RECTANGLE
   21            | T_TEXTBOX

   22 parameter_list_or_empty: parameter_list
   23                        | empty

   24 parameter_list: parameter_list T_COMMA parameter
   25               | parameter

   26 parameter: T_ID T_ASSIGN expression

   27 forward_declaration: T_FORWARD T_ANIMATION T_ID T_LPAREN animation_parameter T_RPAREN

   28 block_list: block_list block
   29           | empty

   30 block: initialization_block
   31      | animation_block
   32      | on_block

   33 initialization_block: T_INITIALIZATION statement_block

   34 $@2: /* empty */

   35 animation_block: T_ANIMATION T_ID T_LPAREN check_animation_parameter T_RPAREN T_LBRACE $@2 statement_list T_RBRACE end_of_statement_block

   36 animation_parameter: object_type T_ID

   37 check_animation_parameter: T_TRIANGLE T_ID
   38                          | T_PIXMAP T_ID
   39                          | T_CIRCLE T_ID
   40                          | T_RECTANGLE T_ID
   41                          | T_TEXTBOX T_ID

   42 on_block: T_ON keystroke statement_block

   43 keystroke: T_SPACE
   44          | T_UPARROW
   45          | T_DOWNARROW
   46          | T_LEFTARROW
   47          | T_RIGHTARROW
   48          | T_LEFTMOUSE_DOWN
   49          | T_MIDDLEMOUSE_DOWN
   50          | T_RIGHTMOUSE_DOWN
   51          | T_LEFTMOUSE_UP
   52          | T_MIDDLEMOUSE_UP
   53          | T_RIGHTMOUSE_UP
   54          | T_MOUSE_MOVE
   55          | T_MOUSE_DRAG
   56          | T_AKEY
   57          | T_SKEY
   58          | T_DKEY
   59          | T_FKEY
   60          | T_HKEY
   61          | T_JKEY
   62          | T_KKEY
   63          | T_LKEY
   64          | T_WKEY
   65          | T_F1

   66 if_block: statement_block_creator statement end_of_statement_block
   67         | statement_block

   68 statement_block: T_LBRACE statement_block_creator statement_list T_RBRACE end_of_statement_block

   69 statement_block_creator: /* empty */

   70 end_of_statement_block: /* empty */

   71 statement_list: statement_list statement
   72               | empty

   73 statement: if_statement
   74          | for_statement
   75          | assign_statement T_SEMIC
   76          | print_statement T_SEMIC
   77          | exit_statement T_SEMIC

   78 if_statement: T_IF T_LPAREN expression T_RPAREN if_block
   79             | T_IF T_LPAREN expression T_RPAREN if_block T_ELSE if_block

   80 for_statement: T_FOR T_LPAREN statement_block_creator assign_statement end_of_statement_block T_SEMIC expression T_SEMIC statement_block_creator assign_statement end_of_statement_block T_RPAREN statement_block

   81 print_statement: T_PRINT T_LPAREN expression T_RPAREN

   82 exit_statement: T_EXIT T_LPAREN expression T_RPAREN

   83 assign_statement: variable T_ASSIGN expression
   84                 | variable T_PLUS_ASSIGN expression
   85                 | variable T_MINUS_ASSIGN expression

   86 variable: T_ID
   87         | T_ID T_LBRACKET expression T_RBRACKET
   88         | T_ID T_PERIOD T_ID
   89         | T_ID T_LBRACKET expression T_RBRACKET T_PERIOD T_ID

   90 expression: primary_expression
   91           | expression T_OR expression
   92           | expression T_AND expression
   93           | expression T_LESS_EQUAL expression
   94           | expression T_GREATER_EQUAL expression
   95           | expression T_LESS expression
   96           | expression T_GREATER expression
   97           | expression T_EQUAL expression
   98           | expression T_NOT_EQUAL expression
   99           | expression T_PLUS expression
  100           | expression T_MINUS expression
  101           | expression T_ASTERISK expression
  102           | expression T_DIVIDE expression
  103           | expression T_MOD expression
  104           | T_MINUS expression
  105           | T_NOT expression
  106           | math_operator T_LPAREN expression T_RPAREN
  107           | variable geometric_operator variable

  108 primary_expression: T_LPAREN expression T_RPAREN
  109                   | variable
  110                   | T_INT_CONSTANT
  111                   | T_TRUE
  112                   | T_FALSE
  113                   | T_DOUBLE_CONSTANT
  114                   | T_STRING_CONSTANT

  115 geometric_operator: T_TOUCHES
  116                   | T_NEAR

  117 math_operator: T_SIN
  118              | T_COS
  119              | T_TAN
  120              | T_ASIN
  121              | T_ACOS
  122              | T_ATAN
  123              | T_SQRT
  124              | T_ABS
  125              | T_FLOOR
  126              | T_RANDOM

  127 empty: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
T_OR (258) 91
T_AND (259) 92
T_NOT_EQUAL (260) 98
T_EQUAL (261) 97
T_LESS_EQUAL (262) 93
T_GREATER_EQUAL (263) 94
T_GREATER (264) 96
T_LESS (265) 95
T_PLUS (266) 99
T_MINUS (267) 100 104
T_MOD (268) 103
T_DIVIDE (269) 102
T_ASTERISK (270) 101
T_NOT (271) 105
UNARY_OPS (272)
T_MINUS_MINUS (273)
T_PLUS_PLUS (274)
T_ASSIGN (275) 12 26 83
IF_NO_ELSE (276)
T_ELSE (277) 79
T_INT (278) 9
T_DOUBLE (279) 10
T_STRING (280) 11
T_TRIANGLE (281) 17 37
T_PIXMAP (282) 18 38
T_CIRCLE (283) 19 39
T_RECTANGLE (284) 20 40
T_TEXTBOX (285) 21 41
T_FORWARD (286) 27
T_INITIALIZATION (287) 33
T_TRUE (288) 111
T_FALSE (289) 112
T_ON (290) 42
T_SPACE (291) 43
T_LEFTARROW (292) 46
T_RIGHTARROW (293) 47
T_UPARROW (294) 44
T_DOWNARROW (295) 45
T_LEFTMOUSE_DOWN (296) 48
T_MIDDLEMOUSE_DOWN (297) 49
T_RIGHTMOUSE_DOWN (298) 50
T_LEFTMOUSE_UP (299) 51
T_MIDDLEMOUSE_UP (300) 52
T_RIGHTMOUSE_UP (301) 53
T_MOUSE_MOVE (302) 54
T_MOUSE_DRAG (303) 55
T_F1 (304) 65
T_AKEY (305) 56
T_SKEY (306) 57
T_DKEY (307) 58
T_FKEY (308) 59
T_HKEY (309) 60
T_JKEY (310) 61
T_KKEY (311) 62
T_LKEY (312) 63
T_WKEY (313) 64
T_TOUCHES (314) 115
T_NEAR (315) 116
T_ANIMATION (316) 27 35
T_IF (317) 78 79
T_FOR (318) 80
T_EXIT (319) 82
T_LPAREN (320) 15 27 35 78 79 80 81 82 106 108
T_RPAREN (321) 15 27 35 78 79 80 81 82 106 108
T_LBRACE (322) 35 68
T_RBRACE (323) 35 68
T_LBRACKET (324) 8 16 87 89
T_RBRACKET (325) 8 16 87 89
T_SEMIC (326) 4 5 6 75 76 77 80
T_COMMA (327) 24
T_PERIOD (328) 88 89
T_PLUS_ASSIGN (329) 84
T_MINUS_ASSIGN (330) 85
T_SIN (331) 117
T_COS (332) 118
T_TAN (333) 119
T_ASIN (334) 120
T_ACOS (335) 121
T_ATAN (336) 122
T_SQRT (337) 123
T_FLOOR (338) 125
T_ABS (339) 124
T_RANDOM (340) 126
T_ID (341) 7 8 15 16 26 27 35 36 37 38 39 40 41 86 87 88 89
T_INT_CONSTANT (342) 110
T_DOUBLE_CONSTANT (343) 113
T_STRING_CONSTANT (344) 114
T_PRINT (345) 81
T_ERROR (346)


Nonterminals, with rules where they appear

$accept (92)
    on left: 0
program (93)
    on left: 1, on right: 0
declaration_list (94)
    on left: 2 3, on right: 1 2
declaration (95)
    on left: 4 5 6, on right: 2
variable_declaration (96)
    on left: 7 8, on right: 4
simple_type (97)
    on left: 9 10 11, on right: 7 8
optional_initializer (98)
    on left: 12 13, on right: 7
object_declaration (99)
    on left: 15 16, on right: 5
$@1 (100)
    on left: 14, on right: 15
object_type (101)
    on left: 17 18 19 20 21, on right: 15 16 36
parameter_list_or_empty (102)
    on left: 22 23, on right: 15
parameter_list (103)
    on left: 24 25, on right: 22 24
parameter (104)
    on left: 26, on right: 24 25
forward_declaration (105)
    on left: 27, on right: 6
block_list (106)
    on left: 28 29, on right: 1 28
block (107)
    on left: 30 31 32, on right: 28
initialization_block (108)
    on left: 33, on right: 30
animation_block (109)
    on left: 35, on right: 31
$@2 (110)
    on left: 34, on right: 35
animation_parameter (111)
    on left: 36, on right: 27
check_animation_parameter (112)
    on left: 37 38 39 40 41, on right: 35
on_block (113)
    on left: 42, on right: 32
keystroke (114)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64 65, on right: 42
if_block (115)
    on left: 66 67, on right: 78 79
statement_block (116)
    on left: 68, on right: 33 42 67 80
statement_block_creator (117)
    on left: 69, on right: 66 68 80
end_of_statement_block (118)
    on left: 70, on right: 35 66 68 80
statement_list (119)
    on left: 71 72, on right: 35 68 71
statement (120)
    on left: 73 74 75 76 77, on right: 66 71
if_statement (121)
    on left: 78 79, on right: 73
for_statement (122)
    on left: 80, on right: 74
print_statement (123)
    on left: 81, on right: 76
exit_statement (124)
    on left: 82, on right: 77
assign_statement (125)
    on left: 83 84 85, on right: 75 80
variable (126)
    on left: 86 87 88 89, on right: 83 84 85 107 109
expression (127)
    on left: 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    106 107, on right: 8 12 16 26 78 79 80 81 82 83 84 85 87 89 91
    92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 108
primary_expression (128)
    on left: 108 109 110 111 112 113 114, on right: 90
geometric_operator (129)
    on left: 115 116, on right: 107
math_operator (130)
    on left: 117 118 119 120 121 122 123 124 125 126, on right: 106
empty (131)
    on left: 127, on right: 3 13 23 29 72


State 0

    0 $accept: . program $end

    $default  reduce using rule 127 (empty)

    program           go to state 1
    declaration_list  go to state 2
    empty             go to state 3


State 1

    0 $accept: program . $end

    $end  shift, and go to state 4


State 2

    1 program: declaration_list . block_list
    2 declaration_list: declaration_list . declaration

    T_INT        shift, and go to state 5
    T_DOUBLE     shift, and go to state 6
    T_STRING     shift, and go to state 7
    T_TRIANGLE   shift, and go to state 8
    T_PIXMAP     shift, and go to state 9
    T_CIRCLE     shift, and go to state 10
    T_RECTANGLE  shift, and go to state 11
    T_TEXTBOX    shift, and go to state 12
    T_FORWARD    shift, and go to state 13

    $default  reduce using rule 127 (empty)

    declaration           go to state 14
    variable_declaration  go to state 15
    simple_type           go to state 16
    object_declaration    go to state 17
    object_type           go to state 18
    forward_declaration   go to state 19
    block_list            go to state 20
    empty                 go to state 21


State 3

    3 declaration_list: empty .

    $default  reduce using rule 3 (declaration_list)


State 4

    0 $accept: program $end .

    $default  accept


State 5

    9 simple_type: T_INT .

    $default  reduce using rule 9 (simple_type)


State 6

   10 simple_type: T_DOUBLE .

    $default  reduce using rule 10 (simple_type)


State 7

   11 simple_type: T_STRING .

    $default  reduce using rule 11 (simple_type)


State 8

   17 object_type: T_TRIANGLE .

    $default  reduce using rule 17 (object_type)


State 9

   18 object_type: T_PIXMAP .

    $default  reduce using rule 18 (object_type)


State 10

   19 object_type: T_CIRCLE .

    $default  reduce using rule 19 (object_type)


State 11

   20 object_type: T_RECTANGLE .

    $default  reduce using rule 20 (object_type)


State 12

   21 object_type: T_TEXTBOX .

    $default  reduce using rule 21 (object_type)


State 13

   27 forward_declaration: T_FORWARD . T_ANIMATION T_ID T_LPAREN animation_parameter T_RPAREN

    T_ANIMATION  shift, and go to state 22


State 14

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


State 15

    4 declaration: variable_declaration . T_SEMIC

    T_SEMIC  shift, and go to state 23


State 16

    7 variable_declaration: simple_type . T_ID optional_initializer
    8                     | simple_type . T_ID T_LBRACKET expression T_RBRACKET

    T_ID  shift, and go to state 24


State 17

    5 declaration: object_declaration . T_SEMIC

    T_SEMIC  shift, and go to state 25


State 18

   15 object_declaration: object_type . T_ID $@1 T_LPAREN parameter_list_or_empty T_RPAREN
   16                   | object_type . T_ID T_LBRACKET expression T_RBRACKET

    T_ID  shift, and go to state 26


State 19

    6 declaration: forward_declaration . T_SEMIC

    T_SEMIC  shift, and go to state 27


State 20

    1 program: declaration_list block_list .
   28 block_list: block_list . block

    T_INITIALIZATION  shift, and go to state 28
    T_ON              shift, and go to state 29
    T_ANIMATION       shift, and go to state 30

    $default  reduce using rule 1 (program)

    block                 go to state 31
    initialization_block  go to state 32
    animation_block       go to state 33
    on_block              go to state 34


State 21

   29 block_list: empty .

    $default  reduce using rule 29 (block_list)


State 22

   27 forward_declaration: T_FORWARD T_ANIMATION . T_ID T_LPAREN animation_parameter T_RPAREN

    T_ID  shift, and go to state 35


State 23

    4 declaration: variable_declaration T_SEMIC .

    $default  reduce using rule 4 (declaration)


State 24

    7 variable_declaration: simple_type T_ID . optional_initializer
    8                     | simple_type T_ID . T_LBRACKET expression T_RBRACKET

    T_ASSIGN    shift, and go to state 36
    T_LBRACKET  shift, and go to state 37

    $default  reduce using rule 127 (empty)

    optional_initializer  go to state 38
    empty                 go to state 39


State 25

    5 declaration: object_declaration T_SEMIC .

    $default  reduce using rule 5 (declaration)


State 26

   15 object_declaration: object_type T_ID . $@1 T_LPAREN parameter_list_or_empty T_RPAREN
   16                   | object_type T_ID . T_LBRACKET expression T_RBRACKET

    T_LBRACKET  shift, and go to state 40

    $default  reduce using rule 14 ($@1)

    $@1  go to state 41


State 27

    6 declaration: forward_declaration T_SEMIC .

    $default  reduce using rule 6 (declaration)


State 28

   33 initialization_block: T_INITIALIZATION . statement_block

    T_LBRACE  shift, and go to state 42

    statement_block  go to state 43


State 29

   42 on_block: T_ON . keystroke statement_block

    T_SPACE             shift, and go to state 44
    T_LEFTARROW         shift, and go to state 45
    T_RIGHTARROW        shift, and go to state 46
    T_UPARROW           shift, and go to state 47
    T_DOWNARROW         shift, and go to state 48
    T_LEFTMOUSE_DOWN    shift, and go to state 49
    T_MIDDLEMOUSE_DOWN  shift, and go to state 50
    T_RIGHTMOUSE_DOWN   shift, and go to state 51
    T_LEFTMOUSE_UP      shift, and go to state 52
    T_MIDDLEMOUSE_UP    shift, and go to state 53
    T_RIGHTMOUSE_UP     shift, and go to state 54
    T_MOUSE_MOVE        shift, and go to state 55
    T_MOUSE_DRAG        shift, and go to state 56
    T_F1                shift, and go to state 57
    T_AKEY              shift, and go to state 58
    T_SKEY              shift, and go to state 59
    T_DKEY              shift, and go to state 60
    T_FKEY              shift, and go to state 61
    T_HKEY              shift, and go to state 62
    T_JKEY              shift, and go to state 63
    T_KKEY              shift, and go to state 64
    T_LKEY              shift, and go to state 65
    T_WKEY              shift, and go to state 66

    keystroke  go to state 67


State 30

   35 animation_block: T_ANIMATION . T_ID T_LPAREN check_animation_parameter T_RPAREN T_LBRACE $@2 statement_list T_RBRACE end_of_statement_block

    T_ID  shift, and go to state 68


State 31

   28 block_list: block_list block .

    $default  reduce using rule 28 (block_list)


State 32

   30 block: initialization_block .

    $default  reduce using rule 30 (block)


State 33

   31 block: animation_block .

    $default  reduce using rule 31 (block)


State 34

   32 block: on_block .

    $default  reduce using rule 32 (block)


State 35

   27 forward_declaration: T_FORWARD T_ANIMATION T_ID . T_LPAREN animation_parameter T_RPAREN

    T_LPAREN  shift, and go to state 69


State 36

   12 optional_initializer: T_ASSIGN . expression

    T_MINUS            shift, and go to state 70
    T_NOT              shift, and go to state 71
    T_TRUE             shift, and go to state 72
    T_FALSE            shift, and go to state 73
    T_LPAREN           shift, and go to state 74
    T_SIN              shift, and go to state 75
    T_COS              shift, and go to state 76
    T_TAN              shift, and go to state 77
    T_ASIN             shift, and go to state 78
    T_ACOS             shift, and go to state 79
    T_ATAN             shift, and go to state 80
    T_SQRT             shift, and go to state 81
    T_FLOOR            shift, and go to state 82
    T_ABS              shift, and go to state 83
    T_RANDOM           shift, and go to state 84
    T_ID               shift, and go to state 85
    T_INT_CONSTANT     shift, and go to state 86
    T_DOUBLE_CONSTANT  shift, and go to state 87
    T_STRING_CONSTANT  shift, and go to state 88

    variable            go to state 89
    expression          go to state 90
    primary_expression  go to state 91
    math_operator       go to state 92


State 37

    8 variable_declaration: simple_type T_ID T_LBRACKET . expression T_RBRACKET

    T_MINUS            shift, and go to state 70
    T_NOT              shift, and go to state 71
    T_TRUE             shift, and go to state 72
    T_FALSE            shift, and go to state 73
    T_LPAREN           shift, and go to state 74
    T_SIN              shift, and go to state 75
    T_COS              shift, and go to state 76
    T_TAN              shift, and go to state 77
    T_ASIN             shift, and go to state 78
    T_ACOS             shift, and go to state 79
    T_ATAN             shift, and go to state 80
    T_SQRT             shift, and go to state 81
    T_FLOOR            shift, and go to state 82
    T_ABS              shift, and go to state 83
    T_RANDOM           shift, and go to state 84
    T_ID               shift, and go to state 85
    T_INT_CONSTANT     shift, and go to state 86
    T_DOUBLE_CONSTANT  shift, and go to state 87
    T_STRING_CONSTANT  shift, and go to state 88

    variable            go to state 89
    expression          go to state 93
    primary_expression  go to state 91
    math_operator       go to state 92


State 38

    7 variable_declaration: simple_type T_ID optional_initializer .

    $default  reduce using rule 7 (variable_declaration)


State 39

   13 optional_initializer: empty .

    $default  reduce using rule 13 (optional_initializer)


State 40

   16 object_declaration: object_type T_ID T_LBRACKET . expression T_RBRACKET

    T_MINUS            shift, and go to state 70
    T_NOT              shift, and go to state 71
    T_TRUE             shift, and go to state 72
    T_FALSE            shift, and go to state 73
    T_LPAREN           shift, and go to state 74
    T_SIN              shift, and go to state 75
    T_COS              shift, and go to state 76
    T_TAN              shift, and go to state 77
    T_ASIN             shift, and go to state 78
    T_ACOS             shift, and go to state 79
    T_ATAN             shift, and go to state 80
    T_SQRT             shift, and go to state 81
    T_FLOOR            shift, and go to state 82
    T_ABS              shift, and go to state 83
    T_RANDOM           shift, and go to state 84
    T_ID               shift, and go to state 85
    T_INT_CONSTANT     shift, and go to state 86
    T_DOUBLE_CONSTANT  shift, and go to state 87
    T_STRING_CONSTANT  shift, and go to state 88

    variable            go to state 89
    expression          go to state 94
    primary_expression  go to state 91
    math_operator       go to state 92


State 41

   15 object_declaration: object_type T_ID $@1 . T_LPAREN parameter_list_or_empty T_RPAREN

    T_LPAREN  shift, and go to state 95


State 42

   68 statement_block: T_LBRACE . statement_block_creator statement_list T_RBRACE end_of_statement_block

    $default  reduce using rule 69 (statement_block_creator)

    statement_block_creator  go to state 96


State 43

   33 initialization_block: T_INITIALIZATION statement_block .

    $default  reduce using rule 33 (initialization_block)


State 44

   43 keystroke: T_SPACE .

    $default  reduce using rule 43 (keystroke)


State 45

   46 keystroke: T_LEFTARROW .

    $default  reduce using rule 46 (keystroke)


State 46

   47 keystroke: T_RIGHTARROW .

    $default  reduce using rule 47 (keystroke)


State 47

   44 keystroke: T_UPARROW .

    $default  reduce using rule 44 (keystroke)


State 48

   45 keystroke: T_DOWNARROW .

    $default  reduce using rule 45 (keystroke)


State 49

   48 keystroke: T_LEFTMOUSE_DOWN .

    $default  reduce using rule 48 (keystroke)


State 50

   49 keystroke: T_MIDDLEMOUSE_DOWN .

    $default  reduce using rule 49 (keystroke)


State 51

   50 keystroke: T_RIGHTMOUSE_DOWN .

    $default  reduce using rule 50 (keystroke)


State 52

   51 keystroke: T_LEFTMOUSE_UP .

    $default  reduce using rule 51 (keystroke)


State 53

   52 keystroke: T_MIDDLEMOUSE_UP .

    $default  reduce using rule 52 (keystroke)


State 54

   53 keystroke: T_RIGHTMOUSE_UP .

    $default  reduce using rule 53 (keystroke)


State 55

   54 keystroke: T_MOUSE_MOVE .

    $default  reduce using rule 54 (keystroke)


State 56

   55 keystroke: T_MOUSE_DRAG .

    $default  reduce using rule 55 (keystroke)


State 57

   65 keystroke: T_F1 .

    $default  reduce using rule 65 (keystroke)


State 58

   56 keystroke: T_AKEY .

    $default  reduce using rule 56 (keystroke)


State 59

   57 keystroke: T_SKEY .

    $default  reduce using rule 57 (keystroke)


State 60

   58 keystroke: T_DKEY .

    $default  reduce using rule 58 (keystroke)


State 61

   59 keystroke: T_FKEY .

    $default  reduce using rule 59 (keystroke)


State 62

   60 keystroke: T_HKEY .

    $default  reduce using rule 60 (keystroke)


State 63

   61 keystroke: T_JKEY .

    $default  reduce using rule 61 (keystroke)


State 64

   62 keystroke: T_KKEY .

    $default  reduce using rule 62 (keystroke)


State 65

   63 keystroke: T_LKEY .

    $default  reduce using rule 63 (keystroke)


State 66

   64 keystroke: T_WKEY .

    $default  reduce using rule 64 (keystroke)


State 67

   42 on_block: T_ON keystroke . statement_block

    T_LBRACE  shift, and go to state 42

    statement_block  go to state 97


State 68

   35 animation_block: T_ANIMATION T_ID . T_LPAREN check_animation_parameter T_RPAREN T_LBRACE $@2 statement_list T_RBRACE end_of_statement_block

    T_LPAREN  shift, and go to state 98


State 69

   27 forward_declaration: T_FORWARD T_ANIMATION T_ID T_LPAREN . animation_parameter T_RPAREN

    T_TRIANGLE   shift, and go to state 8
    T_PIXMAP     shift, and go to state 9
    T_CIRCLE     shift, and go to state 10
    T_RECTANGLE  shift, and go to state 11
    T_TEXTBOX    shift, and go to state 12

    object_type          go to state 99
    animation_parameter  go to state 100


State 70

  104 expression: T_MINUS . expression

    T_MINUS            shift, and go to state 70
    T_NOT              shift, and go to state 71
    T_TRUE             shift, and go to state 72
    T_FALSE            shift, and go to state 73
    T_LPAREN           shift, and go to state 74
    T_SIN              shift, and go to state 75
    T_COS              shift, and go to state 76
    T_TAN              shift, and go to state 77
    T_ASIN             shift, and go to state 78
    T_ACOS             shift, and go to state 79
    T_ATAN             shift, and go to state 80
    T_SQRT             shift, and go to state 81
    T_FLOOR            shift, and go to state 82
    T_ABS              shift, and go to state 83
    T_RANDOM           shift, and go to state 84
    T_ID               shift, and go to state 85
    T_INT_CONSTANT     shift, and go to state 86
    T_DOUBLE_CONSTANT  shift, and go to state 87
    T_STRING_CONSTANT  shift, and go to state 88

    variable            go to state 89
    expression          go to state 101
    primary_expression  go to state 91
    math_operator       go to state 92


State 71

  105 expression: T_NOT . expression

    T_MINUS            shift, and go to state 70
    T_NOT              shift, and go to state 71
    T_TRUE             shift, and go to state 72
    T_FALSE            shift, and go to state 73
    T_LPAREN           shift, and go to state 74
    T_SIN              shift, and go to state 75
    T_COS              shift, and go to state 76
    T_TAN              shift, and go to state 77
    T_ASIN             shift, and go to state 78
    T_ACOS             shift, and go to state 79
    T_ATAN             shift, and go to state 80
    T_SQRT             shift, and go to state 81
    T_FLOOR            shift, and go to state 82
    T_ABS              shift, and go to state 83
    T_RANDOM           shift, and go to state 84
    T_ID               shift, and go to state 85
    T_INT_CONSTANT     shift, and go to state 86
    T_DOUBLE_CONSTANT  shift, and go to state 87
    T_STRING_CONSTANT  shift, and go to state 88

    variable            go to state 89
    expression          go to state 102
    primary_expression  go to state 91
    math_operator       go to state 92


State 72

  111 primary_expression: T_TRUE .

    $default  reduce using rule 111 (primary_expression)


State 73

  112 primary_expression: T_FALSE .

    $default  reduce using rule 112 (primary_expression)


State 74

  108 primary_expression: T_LPAREN . expression T_RPAREN

    T_MINUS            shift, and go to state 70
    T_NOT              shift, and go to state 71
    T_TRUE             shift, and go to state 72
    T_FALSE            shift, and go to state 73
    T_LPAREN           shift, and go to state 74
    T_SIN              shift, and go to state 75
    T_COS              shift, and go to state 76
    T_TAN              shift, and go to state 77
    T_ASIN             shift, and go to state 78
    T_ACOS             shift, and go to state 79
    T_ATAN             shift, and go to state 80
    T_SQRT             shift, and go to state 81
    T_FLOOR            shift, and go to state 82
    T_ABS              shift, and go to state 83
    T_RANDOM           shift, and go to state 84
    T_ID               shift, and go to state 85
    T_INT_CONSTANT     shift, and go to state 86
    T_DOUBLE_CONSTANT  shift, and go to state 87
    T_STRING_CONSTANT  shift, and go to state 88

    variable            go to state 89
    expression          go to state 103
    primary_expression  go to state 91
    math_operator       go to state 92


State 75

  117 math_operator: T_SIN .

    $default  reduce using rule 117 (math_operator)


State 76

  118 math_operator: T_COS .

    $default  reduce using rule 118 (math_operator)


State 77

  119 math_operator: T_TAN .

    $default  reduce using rule 119 (math_operator)


State 78

  120 math_operator: T_ASIN .

    $default  reduce using rule 120 (math_operator)


State 79

  121 math_operator: T_ACOS .

    $default  reduce using rule 121 (math_operator)


State 80

  122 math_operator: T_ATAN .

    $default  reduce using rule 122 (math_operator)


State 81

  123 math_operator: T_SQRT .

    $default  reduce using rule 123 (math_operator)


State 82

  125 math_operator: T_FLOOR .

    $default  reduce using rule 125 (math_operator)


State 83

  124 math_operator: T_ABS .

    $default  reduce using rule 124 (math_operator)


State 84

  126 math_operator: T_RANDOM .

    $default  reduce using rule 126 (math_operator)


State 85

   86 variable: T_ID .
   87         | T_ID . T_LBRACKET expression T_RBRACKET
   88         | T_ID . T_PERIOD T_ID
   89         | T_ID . T_LBRACKET expression T_RBRACKET T_PERIOD T_ID

    T_LBRACKET  shift, and go to state 104
    T_PERIOD    shift, and go to state 105

    $default  reduce using rule 86 (variable)


State 86

  110 primary_expression: T_INT_CONSTANT .

    $default  reduce using rule 110 (primary_expression)


State 87

  113 primary_expression: T_DOUBLE_CONSTANT .

    $default  reduce using rule 113 (primary_expression)


State 88

  114 primary_expression: T_STRING_CONSTANT .

    $default  reduce using rule 114 (primary_expression)


State 89

  107 expression: variable . geometric_operator variable
  109 primary_expression: variable .

    T_TOUCHES  shift, and go to state 106
    T_NEAR     shift, and go to state 107

    $default  reduce using rule 109 (primary_expression)

    geometric_operator  go to state 108


State 90

   12 optional_initializer: T_ASSIGN expression .
   91 expression: expression . T_OR expression
   92           | expression . T_AND expression
   93           | expression . T_LESS_EQUAL expression
   94           | expression . T_GREATER_EQUAL expression
   95           | expression . T_LESS expression
   96           | expression . T_GREATER expression
   97           | expression . T_EQUAL expression
   98           | expression . T_NOT_EQUAL expression
   99           | expression . T_PLUS expression
  100           | expression . T_MINUS expression
  101           | expression . T_ASTERISK expression
  102           | expression . T_DIVIDE expression
  103           | expression . T_MOD expression

    T_OR             shift, and go to state 109
    T_AND            shift, and go to state 110
    T_NOT_EQUAL      shift, and go to state 111
    T_EQUAL          shift, and go to state 112
    T_LESS_EQUAL     shift, and go to state 113
    T_GREATER_EQUAL  shift, and go to state 114
    T_GREATER        shift, and go to state 115
    T_LESS           shift, and go to state 116
    T_PLUS           shift, and go to state 117
    T_MINUS          shift, and go to state 118
    T_MOD            shift, and go to state 119
    T_DIVIDE         shift, and go to state 120
    T_ASTERISK       shift, and go to state 121

    $default  reduce using rule 12 (optional_initializer)


State 91

   90 expression: primary_expression .

    $default  reduce using rule 90 (expression)


State 92

  106 expression: math_operator . T_LPAREN expression T_RPAREN

    T_LPAREN  shift, and go to state 122


State 93

    8 variable_declaration: simple_type T_ID T_LBRACKET expression . T_RBRACKET
   91 expression: expression . T_OR expression
   92           | expression . T_AND expression
   93           | expression . T_LESS_EQUAL expression
   94           | expression . T_GREATER_EQUAL expression
   95           | expression . T_LESS expression
   96           | expression . T_GREATER expression
   97           | expression . T_EQUAL expression
   98           | expression . T_NOT_EQUAL expression
   99           | expression . T_PLUS expression
  100           | expression . T_MINUS expression
  101           | expression . T_ASTERISK expression
  102           | expression . T_DIVIDE expression
  103           | expression . T_MOD expression

    T_OR             shift, and go to state 109
    T_AND            shift, and go to state 110
    T_NOT_EQUAL      shift, and go to state 111
    T_EQUAL          shift, and go to state 112
    T_LESS_EQUAL     shift, and go to state 113
    T_GREATER_EQUAL  shift, and go to state 114
    T_GREATER        shift, and go to state 115
    T_LESS           shift, and go to state 116
    T_PLUS           shift, and go to state 117
    T_MINUS          shift, and go to state 118
    T_MOD            shift, and go to state 119
    T_DIVIDE         shift, and go to state 120
    T_ASTERISK       shift, and go to state 121
    T_RBRACKET       shift, and go to state 123


State 94

   16 object_declaration: object_type T_ID T_LBRACKET expression . T_RBRACKET
   91 expression: expression . T_OR expression
   92           | expression . T_AND expression
   93           | expression . T_LESS_EQUAL expression
   94           | expression . T_GREATER_EQUAL expression
   95           | expression . T_LESS expression
   96           | expression . T_GREATER expression
   97           | expression . T_EQUAL expression
   98           | expression . T_NOT_EQUAL expression
   99           | expression . T_PLUS expression
  100           | expression . T_MINUS expression
  101           | expression . T_ASTERISK expression
  102           | expression . T_DIVIDE expression
  103           | expression . T_MOD expression

    T_OR             shift, and go to state 109
    T_AND            shift, and go to state 110
    T_NOT_EQUAL      shift, and go to state 111
    T_EQUAL          shift, and go to state 112
    T_LESS_EQUAL     shift, and go to state 113
    T_GREATER_EQUAL  shift, and go to state 114
    T_GREATER        shift, and go to state 115
    T_LESS           shift, and go to state 116
    T_PLUS           shift, and go to state 117
    T_MINUS          shift, and go to state 118
    T_MOD            shift, and go to state 119
    T_DIVIDE         shift, and go to state 120
    T_ASTERISK       shift, and go to state 121
    T_RBRACKET       shift, and go to state 124


State 95

   15 object_declaration: object_type T_ID $@1 T_LPAREN . parameter_list_or_empty T_RPAREN

    T_ID  shift, and go to state 125

    $default  reduce using rule 127 (empty)

    parameter_list_or_empty  go to state 126
    parameter_list           go to state 127
    parameter                go to state 128
    empty                    go to state 129


State 96

   68 statement_block: T_LBRACE statement_block_creator . statement_list T_RBRACE end_of_statement_block

    $default  reduce using rule 127 (empty)
